Not serving .git on firebase...

--- a/firebase.json
+++ b/firebase.json
@@ -3,7 +3,8 @@
         "public": ".",
         "ignore": [
             "firebase.json",
-            "**/.*"
+            "**/.*",
+            ".git/*"
          ]
     }
 }
